opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/accessor_async"
bug-reports: "https://github.com/janestreet/accessor_async/issues"
dev-repo: "git+https://github.com/janestreet/accessor_async.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/accessor_async/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {>= "4.14.0"}
  "accessor_core" {>= "v0.16" & < "v0.17"}
  "async_kernel"  {>= "v0.16" & < "v0.17"}
  "core"          {>= "v0.16" & < "v0.17"}
  "ppx_accessor"  {>= "v0.16" & < "v0.17"}
  "ppx_jane"      {>= "v0.16" & < "v0.17"}
  "dune"          {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Accessors for Async types, for use with the Accessor library"
description: "
This library provides accessors for numerous types in Async.
"
